# yonier_harrypotter

./: README.md  main.py  pyproject.toml  setup.py
env/: pyvenv.cfg
yonier_harrypotter/: __init__.py  harrypotter.py
yonier_harrypotter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
yonierharrypotter/: __init__.py  __main__.py  harrypotter.py  harrypotter_poder.py
yonierharrypotter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
